reestruturação de estrutura de fluxos de autenticação, criação de repositories para implementação e acesso a dados da estrutura de oauth2
